# Declaring an explicit [workspace] keeps this crate isolated from the root
# Axion workspace.  It must be compiled separately for the wasm32-wasip1 target:
#
#   cd axion-professionals/memory
#   cargo build --target wasm32-wasip1 --release
#   cp target/wasm32-wasip1/release/axion-memory.wasm \
#      ../../axion-core/professionals/memory.wasm
[workspace]

[package]
name = "axion-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
