# Declaring an explicit [workspace] keeps this crate isolated from the root
# Axion workspace.  It must be compiled separately for the wasm32-wasip1 target:
#
#   cd axion-professionals/vision
#   cargo build --target wasm32-wasip1 --release
#   cp target/wasm32-wasip1/release/axion-vision.wasm \
#      ../../axion-core/professionals/vision.wasm
[workspace]

[package]
name = "axion-vision"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
